# dateutil-tests-study

./: README.md  pyproject.toml  test.sh
.github/workflows/: classroom.yml
src/: _common.py  relativedelta.py
src/relativedelta/: __init__.py  _common.py  relativedelta.py
tests/: test_relativedelta.py
